# monthly-agent

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
docs/: architecture.md  br006-shadow-evidence-contract.md  current-status.md  d3-indexed-marker-syntax-contract.md  decisions.md  extraction-boundary.md  governance.md  output-contracts.md  pipeline-run-contract.md  project-plan.md  roadmap.md  rule-authoring-guide.md  scoped-downstream-eligibility-implementation.md
examples/: sample-output.json  sample-qa-report.md  sample-source-text.md
prompts/: extract-activity-info.md  qa-check-monthly-info.md
rules/: BR-001-required-fields.md  BR-002-fee-uncertainty.md  BR-003-registration-period.md  BR-004-qa-status.md  BR-005-source-reference.md  BR-006-per-session-date-completeness.md  README.md
schemas/: activity.schema.json  governance-post-merge-gate-input.schema.json  governance-pr-gate-input.schema.json
tests/: test_business_validator.py  test_d3_indexed_marker_validator.py  test_governance_post_merge_gate.py  test_governance_pr_gate.py  test_governance_pr_gate_ci.py  test_oar_canonical.py  test_oar_concurrency.py  test_oar_fail_closed.py  test_oar_lifecycle_invariants.py  test_oar_negative_cases.py  test_oar_positive_scenarios.py  test_oar_resource_limits.py  test_oar_result_contract.py  test_schema_validator.py  test_validation_findings_json.py
tools/: check_package_install.py  governance_post_merge_gate.py  governance_pr_gate.py  governance_pr_gate_ci.py  validate_business_rules.py  validate_schema.py  validation_findings_json.py  (+1 more)
(+178 files in other folders)
